--- a/blog-posts/unit3_cheatsheet.html
+++ b/blog-posts/unit3_cheatsheet.html
@@ -32,6 +32,7 @@
 					<li><a href="../unit1_projects/my_wireframe.html">Site Planning</a></li>
 					<li><a href="../w2r/starting-point.html">Group Responsive Design</a></li>
 					<li><a href="../gps1.1/gps1.1.html">GPS1.1</a></li>
+					<li><a href="unit3_cheatsheet.html">Git Cheatsheet</a></li>
 					<li><label>Blogs</label></li>
 					<li><a href="week1_technical.html">My Favorite Sites</a></li>
 					<li><a href="week1_cultural.html">Take Charge of Your Edu</a></li>
@@ -48,6 +49,7 @@
 					<li><a href="week7_cultural.html">The Way Out is In</a></li>
 					<li><a href="week8_technical.html">How Good is Your Algorithm? : Big-O Notation</a></li>
 					<li><a href="week8_cultural.html">How to Live with Broken Relationship</a></li>
+					<li><a href="week9_cultural.html">The Art of Asking</a></li>
 					<li><label>Game</label></li>
 					<li><a href="../solo/solo.html">The Game of Game of Thrones</a></li>
 				</ul>
