--- a/blog-posts/week9_cultural.html
+++ b/blog-posts/week9_cultural.html
@@ -68,18 +68,18 @@
 
 							<h4>Ask and You Shall Receive</h4>
 							<p>
-							Anyone could ask a question, but not everyone can ask good question. Thus, asking is an art. The different in one word out of a ten thousand words essay could be as crucial as getting the right response and not. Asking is a powerful tool. I believe that if one know how to ask the right question, one could almost always get whatever answer one so desires. So how do one improve one's approach to asking to get the right answer? This article answer that question by exploring different techniques necessary to master this art of asking and help you get the answer you want just simply from knowing how to ask the right question. 
+							Anyone could ask a question, but not everyone can ask good question. Thus, asking is an art. The different in one word out of a ten thousand words essay could be as crucial as getting the right response and not. Asking is a powerful tool. I believe that if one know how to ask the right question, one could almost always get whatever answer one so desires. So how does one improve one's approach to asking to get the right answer? This article answers that question by exploring essential techniques necessary to master this art of asking and help you get the answer you want just simply from knowing how to ask the right question. 
 							</p>
 
 							<h4>Rules of Thumb #1: Always Try to Help Yourself Before Asking Others for Help</h4>
-							<p>It's always a good practice to try to do things for yourself first because you not only get to learn and find out the answer by and for yourself, but you also become more independence to others and more self-reliance in the future. Don't make a habit of relaying on others all the time. It's annoying to others people and people will not appreciate you "using" them. So try your best to  thinking the problem through, if you feel it's beyond your knowledge then seek help.</p>
+							<p>It's always a good practice to try to do things for yourself first because you not only get to learn and find out the answer by and for yourself, but you also become more independence to others and more self-reliance in the future. Don't make a habit of relaying on others all the time. It's annoying to others people and people will not appreciate you "using" them. So try your best to  think the problem through, if you feel it's beyond your knowledge then respectfully seek help.</p>
 
 							<h4>Rules of Thumb #2: Imagine Yourself Answering the Question</h4>
 							<p>
 								When I am answering a question I do no want to spend too much time searching, and figuring out what the main point of the problem is. This is not my job. It's the person who posted the question job's. If I see the problem is dragging on too long, I sometimes just quit half-way. Similarly, if I read the problem through once and it doesn't make any sense, I have a much higher chance of just giving up and move on. 
 							</p>
 							<p>
-								Just from knowing how I react to bad question, I knew exactly what to do and what to avoid such a response when posting my own question. So use the same standard you uphold, it will surely help you see your question from a different perspective.
+								Just from knowing how myself react to bad question, I knew exactly what to do and what to avoid such a response when posting my own question. So use the same standard you uphold, it will surely help you see your question from a different light.
 							</p>
 							<h4>Rules of Thumb #3: Detailed Yet Concise</h4>
 							<p>
@@ -92,15 +92,15 @@
 
 							<h4>Rules of Thumb #4: Be Responsible With Your Question</h4>
 							<p>
-								Imagine someone asking you a serious question, and you seriously answer them back. However, when they got your response they just stop looking at your and pay you zero attention as if whatever response you gave them didn't happen. How would you feel? 
+								Imagine someone asking you a serious question, and you seriously answer them back. However, when he or she receives your response they just stop looking at you and pay you zero attention as if whatever response you gave them didn't happen. How would you feel? 
 							</p>
 							<p>
-								When asking question, it is important to always be attentive and appreciative to your people giving you the answer. I do not think it is just bad manner to post a question, get the answer you want, and walk out without saying a word to the people answering you your question. It's blatantly selfish. I have seem a lot of people who ask a question while they are frustrated. And they act as if everyone SHOULD give them the solution they want--like a kids who is throwing tantrum when their parents didn't buy them exactly what they want. And that is just not very professional. So separate out whatever emotions you had prior to asking your question and be remember to respectful and grateful to the others who choose to spent their precious time just to give you your solution.
+								When asking question, it is important to always be attentive and appreciative to your people giving you the answer. I do not think it is just bad manner to post a question, get the answer you want, and walk out without saying a word to the people answering you your question. It's blatantly selfish. I have seem a lot of people who ask a question while they are frustrated. And they act as if everyone SHOULD give them the solution they want--like a kids who is throwing tantrum when their parents didn't buy them exactly what they want. And that is just not very professional. So separate out whatever emotions you had prior to asking your question and remember to be respectful and grateful to the others who choose to spent their precious time just to give you your solution.
 							</p>
 
 							<h4>Conclusion</h4>
 							<p>
-								Asking good question is definitely an art. By keeping these rules of thumb in mind before, when, and after you formulate a question, would improve your ability to ask and get the desired response. However, this is not going to improve you right away unless you take the time and effort to consciously practice and do it until you finally create a habit out of it. As long as you keep up the desire to become better, I have full confidence that you will master this art of asking.
+								Asking good question is an art. By keeping these rules of thumb in mind before, when, and after you formulate a question, will improve your ability to ask and get the desired response. However, this is not going to improve you right away unless you take the time and effort to consciously practice and do it until you finally create a habit out of it. As long as you keep up the desire to become better, I have full confidence that you will master this art of asking!
 							</p>
 
 						</article>
