--- a/index2.html
+++ b/index2.html
@@ -26,6 +26,7 @@
 				<li><a href="blog-posts/week2_technical.html" class="button">Inline or Inline-block</a></li>
 				<li><a href="gps1.1/gps1.1.html" class="button">GPS1.1</a></li>
 				<li><a href="solo/solo.html" class="button">The Game of Game of Thrones</a></li>
+				<li><a href="solo/solo.html" class="button">The Game of Game of Thrones</a></li>
 			</ul>
 		</nav>
 		<div id="gridcontainer" class="js-isotope" data-isotope-options='{ "columnWidth": 500, "itemSelector": ".item", "stamp": ".stamp" }'>
