--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
 
 					</div> <!-- row -->
 					</div> <!-- gridcontainer -->
-					<div class="text-center" style="margin: 0 15px 15px 15px;; padding: 0 15px 15px 15px;">
-						<h2 style="text-shadow:none;"><small>"Design with <span class="redcolor">aesthetic</span>. Code with <span class="redcolor">precision</span>."</small></h2>
-					<a href="#portfolio" class="button floatCenter small-red"  style="font-size: 1.1em; width:200px;">See My Work!</a>
+					<div class="text-center" style="margin: 0 15px 15px 15px; padding: 0 15px 15px 15px;">
+						<h4 style="text-shadow:none;"><small>"Design with aesthetic. Code with precision."</small></h4><br>
+					<a href="#portfolio" class="button floatCenter small-red"  style="font-size: 1.2em; width:200px;">See My Work!</a>
 					</div>
 					<!-- <hr style="border-top-color: red"> -->
 
@@ -130,7 +130,7 @@
 								<h5>How Its Made:</h5>
 								<div class="row">
 									<div class="medium-6 columns">
-									<p>BACKEND</p>
+									<p>Backend</p>
 								    <ul>
 								      <li>Node.js</li>
 								      <li>MongoDB</li>
@@ -138,7 +138,7 @@
 								    </ul>
 								  </div>
 								  <div class="medium-6 columns">
-									<p>FRONTEND</p>
+									<p>Frontend</p>
 								    <ul>
 								      <li>Angular.js</li>
 								      <li>Bootstrap</li>
@@ -148,10 +148,10 @@
 								 <a href="http://puanjai.com" class="button floatCenter small-red haveMargin">View Live</a>
 
 								<div class="owl-demo owl-carousel owl-theme">
-								  <div class="item shadow"><img src="assets/images/puanjai1.png" alt="The Last of us"></div>
-								  <div class="item shadow"><img src="assets/images/puanjai2.png" alt="GTA V"></div>
-								  <div class="item shadow"><img src="assets/images/puanjai3.png" alt="Mirror Edge"></div>
-								  <div class="item shadow"><img src="assets/images/puanjai4.png" alt="Mirror Edge"></div>
+								  <div class="item shadow"><img src="assets/images/puanjai1.jpg" alt="The Last of us"></div>
+								  <div class="item shadow"><img src="assets/images/puanjai2.jpg" alt="GTA V"></div>
+								  <div class="item shadow"><img src="assets/images/puanjai3.jpg" alt="Mirror Edge"></div>
+								  <div class="item shadow"><img src="assets/images/puanjai4.jpg" alt="Mirror Edge"></div>
 								</div>
 							</div>
 						</div>
@@ -165,7 +165,7 @@
 								<h5>How Its Made:</h5>
 								<div class="row">
 									<div class="medium-6 columns">
-									<p>BACKEND</p>
+									<p>Backend</p>
 								    <ul>
 								      <li>Ruby on Rails</li>
 								      <li>MongoDB</li>
@@ -173,7 +173,7 @@
 								    </ul>
 								  </div>
 								  <div class="medium-6 columns">
-									<p>FRONTEND</p>
+									<p>Frontend</p>
 								    <ul>
 								      <li>Bootstrap</li>
 								    </ul>
@@ -181,11 +181,11 @@
 								 </div>
 								 <a href="http://128.199.95.219:3000/" class="button floatCenter small-red haveMargin">View Live</a>
 								<div class="owl-demo owl-carousel owl-theme">
-								  <div class="item shadow"><img src="assets/images/suanmokkh1.png" alt="The Last of us"></div>
-								  <div class="item shadow"><img src="assets/images/suanmokkh2.png" alt="GTA V"></div>
-								  <div class="item shadow"><img src="assets/images/suanmokkh3.png" alt="Mirror Edge"></div>
-								  <div class="item shadow"><img src="assets/images/suanmokkh4.png" alt="Mirror Edge"></div>
-								  <div class="item shadow"><img src="assets/images/suanmokkh5.png" alt="Mirror Edge"></div>
+								  <div class="item shadow"><img src="assets/images/suanmokkh1.jpg" alt="The Last of us"></div>
+								  <div class="item shadow"><img src="assets/images/suanmokkh2.jpg" alt="GTA V"></div>
+								  <div class="item shadow"><img src="assets/images/suanmokkh3.jpg" alt="Mirror Edge"></div>
+								  <div class="item shadow"><img src="assets/images/suanmokkh4.jpg" alt="Mirror Edge"></div>
+								  <div class="item shadow"><img src="assets/images/suanmokkh5.jpg" alt="Mirror Edge"></div>
 								</div>
 							</div>
 						</div>
