--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<meta charset="utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<title>Korn's Tech Blog</title>
+	<meta content="Korn's Tech Blog" property="og:site_name" /><meta content="blog" property="og:type" /><meta content="http://st.depositphotos.com/1084193/2079/v/950/depositphotos_20798089-Abstract-red-round-Technology-circuit-background-vector-illustra.jpg" property="og:image" /><meta content="Korn's Tech Blog" property="og:title" /><meta content="http://klaoha06.github.io/" property="og:url" /><meta content="My name is Korn. This site is created for you to get to know me better about the kind of tech work I do. And what are my pooints of view on the lastest trends and technologies. Bellow are my porfolio for you to see what kind of tech work I have dabbling with. To navigate through all my works thus far please click on the links to your left." property="og:description" />
+	<meta content="Korn's Tech Blog" name="twitter:site" /><meta content="" name="twitter:card" /><meta content="Korn's Tech Blog" name="twitter:title" /><meta content="My name is Korn. This site is created for you to get to know me better about the kind of tech work I do. And what are my pooints of view on the lastest trends and technologies. Bellow are my porfolio for you to see what kind of tech work I have dabbling with. To navigate through all my works thus far please click on the links to your left." name="twitter:description" /><meta content="http://st.depositphotos.com/1084193/2079/v/950/depositphotos_20798089-Abstract-red-round-Technology-circuit-background-vector-illustra.jpg" name="twitter:image:src" />
 	<!-- Important Owl stylesheet -->
 	<link rel="stylesheet" href="assets/owl-carousel/owl.carousel.css">
 	 
