--- a/blog-posts/blog_template.html
+++ b/blog-posts/blog_template.html
@@ -56,7 +56,7 @@
 	<aside class="large-3 columns">
 		<div class="panel">
 		<img id="me" src="../unit1_projects/images/logo.jpg">
-			<p style="font-size: .8em; margin-top:20px;">Hi, I am Korn, a beginner web developer and designer! Any helps are welcomed!</p>
+			<p style="font-size: .8em; margin-top:20px;">Hi, I am Korn, a full-stack web developer and designer! Any helps are welcomed!</p>
 			<a href="#"></a>
 		</div>
 		<h5>Reference</h5>
