--- a/blog-posts/unit3_cheatsheet.html
+++ b/blog-posts/unit3_cheatsheet.html
@@ -135,7 +135,7 @@
 					<aside class="large-3 columns">
 						<div class="panel">
 							<img id="me" src="../unit1_projects/images/logo.jpg">
-							<p>Hi, I am Korn, a beginner web developer, a designer, a buddhist fanatic, and an hobbyist philospher. Follow, like, and contact me from the icons below</p>
+							<p>Hi, I am Korn, a full-stack web developer, a designer, a buddhist fanatic, and an hobbyist philospher. Follow, like, and contact me from the icons below</p>
 							<hr>
 							<a href="https://www.facebook.com/kornslife?ref=hl"><i class="icon-facebook-rect"></i></a><hr>
 							<a href="https://twitter.com/klaoha06"><i class="icon-twitter-bird"></i></a><hr>
