--- a/blog-posts/week4_cultural.html
+++ b/blog-posts/week4_cultural.html
@@ -25,14 +25,16 @@
 			<aside class="left-off-canvas-menu">
 				<ul class="off-canvas-list">
 					<li><a href="../index.html"><span style="font-size: 1.5em;">Index</span></a></li>
-					<li><label>Projects</label></li>
-					<li><a href="../unit1_projects/dbc1.html">DBC1</a></li>
-					<li><a href="../unit1_projects/dbc2.html">DBC2</a></li>
+					<li><label>Blogs</label></li>
+						<!-- 				<li><a href="../unit1_projects/dbc1.html">DBC1</a></li>
+					 <li><label>Projects</label></li> -->
+
+	<!-- 				<li><a href="../unit1_projects/dbc1.html">DBC1</a></li>
+					<li><a href="../unit1_projects/dbc2.html">DBC2</a></li> -->
 					<li><a href="../unit1_projects/wireframe_sites.html">Wireframing</a></li>
 					<li><a href="../unit1_projects/my_wireframe.html">Site Planning</a></li>
 					<li><a href="../w2r/starting-point.html">Group Responsive Design</a></li>
-					<li><a href="../gps1.1/gps1.1.html">GPS1.1</a></li>
-					<li><label>Blogs</label></li>
+					<!-- <li><a href="../gps1.1/gps1.1.html">GPS1.1</a></li> -->
 					<li><a href="week1_technical.html">My Favorite Sites</a></li>
 					<li><a href="week1_cultural.html">Take Charge of Your Edu</a></li>
 					<li><a href="week2_technical.html">Inline or Inline-block</a></li>
@@ -42,6 +44,13 @@
 					<li><a href="week4_cultural.html">Privacy is Dead</a></li>
 					<li><a href="week5_cultural.html">Don't Be Afraid of Feedback, Welcome It!</a></li>
 					<li><a href="week5_technical.html">Class in Ruby, Simplified</a></li>
+					<li><a href="week6_technical.html">Variables Scope in Ruby</a></li>
+					<li><a href="week6_cultural.html">Stereotype Threat, Not!</a></li>
+					<li><a href="week7_technical.html">Hacking SQL</a></li>
+					<li><a href="week7_cultural.html">The Way Out is In</a></li>
+					<li><a href="week8_technical.html">How Good is Your Algorithm? : Big-O Notation</a></li>
+					<li><a href="week8_cultural.html">How to Live with Broken Relationship</a></li>
+					<li><a href="week9_cultural.html">The Art of Asking</a></li>
 					<li><label>Game</label></li>
 					<li><a href="../solo/solo.html">The Game of Game of Thrones</a></li>
 				</ul>
