--- a/blog-posts/week8_cultural.html
+++ b/blog-posts/week8_cultural.html
@@ -25,15 +25,15 @@
 			<aside class="left-off-canvas-menu">
 					<ul class="off-canvas-list">
 					<li><a href="../index.html"><span style="font-size: 1.5em;">Index</span></a></li>
-					<li><label>Projects</label></li>
-					<li><a href="../unit1_projects/dbc1.html">DBC1</a></li>
-					<li><a href="../unit1_projects/dbc2.html">DBC2</a></li>
+					<li><label>Blogs</label></li>
+					<!-- <li><label>Projects</label></li> -->
+	<!-- 				<li><a href="../unit1_projects/dbc1.html">DBC1</a></li>
+					<li><a href="../unit1_projects/dbc2.html">DBC2</a></li> -->
 					<li><a href="../unit1_projects/wireframe_sites.html">Wireframing</a></li>
 					<li><a href="../unit1_projects/my_wireframe.html">Site Planning</a></li>
 					<li><a href="../w2r/starting-point.html">Group Responsive Design</a></li>
-					<li><a href="../gps1.1/gps1.1.html">GPS1.1</a></li>
+					<!-- <li><a href="../gps1.1/gps1.1.html">GPS1.1</a></li> -->
 					<li><a href="unit3_cheatsheet.html">Git Cheatsheet</a>
-					<li><label>Blogs</label></li>
 					<li><a href="week1_technical.html">My Favorite Sites</a></li>
 					<li><a href="week1_cultural.html">Take Charge of Your Edu</a></li>
 					<li><a href="week2_technical.html">Inline or Inline-block</a></li>
