--- a/index.html
+++ b/index.html
@@ -72,22 +72,22 @@
 					">Korn's <span class="redcolor" style="font-family: tech3; font-size:1.3em;">Tech</span> Blog</h1>
 				</header>
 				<div id="gridcontainer" class="js-isotope" data-isotope-options='{ "columnWidth": 500, "itemSelector": ".item", "stamp": ".stamp" }'>
-					<div class="row" data-equalizer>
-						<div class="item large-4 medium-6 small-12 columns" data-equalizer-watch>
+					<div class="row">
+						<div class="item large-4 medium-6 small-12 columns">
 							<div class="box red">
 								<p><span style="font-size: 1.5em;">Welcome!</span></p>
 								<hr>
 								<p>..to my GitHub Page! My name is Korn. This site is created for you to get to know me better about the kind of tech work I do. And what are my pooints of view on the lastest trends and technologies. Bellow are my porfolio for you to see what kind of tech work I have dabbling with. To navigate through all my works thus far please click on the links to your left.<br><br><br>Enjoy and have a wonderful day!</p>
 							</div>
 						</div>
-						<div class="item large-4 medium-6 small-12 columns" data-equalizer-watch>
+						<div class="item large-4 medium-6 small-12 columns">
 							<div class="box black">
 								<span style="font-size: 1.2em; line-height:150%;">A Little Something About Myself</span>
 								<hr>
 								<p>I am 26 years. Born and raised in Bangkok, Thailand. Went to college in Indiana, USA at Earlham College. Majored in Politics. After college, I became a Theravada buddhist monk for 1 year. Afterward, I worked for my family in a rice mills factory while also helping a local temple organizing meditation courses. And out of all that, when I have free time. I code!</p>
 							</div>
 						</div>
-						<div class="item large-4 medium-6 small-12 columns" data-equalizer-watch>
+						<div class="item large-4 medium-6 small-12 columns">
 							<div class="box red">
 
 								<p><span style="font-size: 1.2em; line-height:150%;">Projects</span><hr>
@@ -123,7 +123,7 @@
 
 				<div>
 					<div class="row">
-						<div class="item large-12 columns">
+						<div class="large-12 columns">
 							<div class="box small-black">
 								<a href="http://128.199.95.219:3000/"><h3>SUANMOKKH.ORG</h3></a>
 								<hr>
@@ -157,7 +157,7 @@
 						</div>
 					</div> <!-- row -->
 					<div class="row">
-						<div class="item large-12 columns">
+						<div class="large-12 columns">
 							<div class="box small-red">
 								<a href="http://puanjai.com"><h3>PUANJAI.COM</h3></a>
 								<hr>
