--- a/blog-posts/blog_template.html
+++ b/blog-posts/blog_template.html
@@ -22,9 +22,11 @@
 			<aside class="left-off-canvas-menu">
 				<ul class="off-canvas-list">
 					<li><a href="../index.html"><span style="font-size: 1.5em;">Index</span></a></li>
-					<li><label>Projects</label></li>
-					<li><a href="../unit1_projects/dbc1.html">DBC1</a></li>
-					<li><a href="../unit1_projects/dbc2.html">DBC2</a></li>
+						<!-- 				<li><a href="../unit1_projects/dbc1.html">DBC1</a></li>
+					 <li><label>Projects</label></li> -->
+
+	<!-- 				<li><a href="../unit1_projects/dbc1.html">DBC1</a></li>
+					<li><a href="../unit1_projects/dbc2.html">DBC2</a></li> -->
 					<li><a href="../unit1_projects/wireframe_sites.html">Wireframing</a></li>
 					<li><a href="../unit1_projects/my_wireframe.html">Site Planning</a></li>
 					<li><a href="../w2r/starting-point.html">Group Responsive Design</a></li>
