--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
 					<li><a href="solo/solo.html">The Game of Game of Thrones</a></li>
 				</ul>
 			</aside>
-			<section id="container" class="main-section fullscreen">
+			<section class="main-section fullscreen large-10 large-offset-1 columns">
 				<header id="title">
 					<h1 style="font-family: yo; font-size: 5em; color:black; text-shadow: 2px 2px 2px rgba(150, 150, 150, 1);
 					">Korn's <span class="redcolor" style="font-family: tech3; font-size:1.3em;">Tech</span> Blog</h1>
 				</header>
-				<div id="gridcontainer" class="js-isotope" data-isotope-options='{ "columnWidth": 500, "itemSelector": ".item", "stamp": ".stamp" }'>
+				<div id="gridcontainer" class="js-isotope" data-isotope-options='{ "columnWidth": 700, "itemSelector": ".item", "stamp": ".stamp" }'>
 					<div class="row">
 						<div class="item large-4 medium-6 small-12 columns">
 							<div class="box red">
@@ -113,17 +113,17 @@
 					<!-- <hr style="border-top-color: red"> -->
 
 					</section> <!-- container -->
-								<section id="container" class="main-section">
+								<section class="main-section">
 <!-- 				<header id="title">
 					<h1 style="font-family: yo; font-size: 5em; color:black; text-shadow: 2px 2px 2px rgba(150, 150, 150, 1);
 					">Korn's <span class="redcolor" style="font-family: tech3; font-size:1.3em;">Tech</span> Blog</h1>
 				</header> -->
-				<a name="portfolio"></a>
 				<!-- <h2 data-magellan-destination="portfolio" class="text-center">Showcase</h2> -->
 
 				<div>
 					<div class="row">
 						<div class="large-12 columns">
+							<a name="portfolio"></a>
 							<div class="box small-black">
 								<a href="http://128.199.95.219:3000/"><h3>SUANMOKKH.ORG</h3></a>
 								<hr>
