--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 							<div class="box small-red">
 								<a href="http://puanjai.com"><h3>PUANJAI.COM</h3></a>
 								<hr>
-								<blockquote><strong>Purpose: </strong>This website is create for fun. It allows people to ask difficult questions in life online while the community help one another to response to those in need. The community is still small but it is a tight community.</blockquote>
+								<blockquote><strong>Purpose: </strong>This website allows people to ask difficult questions in life online while the community help one another to response to those in need. The community is still small but it is a tight community.</blockquote>
 								<h5>How Its Made:</h5>
 								<div class="row">
 									<div class="medium-6 columns">
