--- a/index.html
+++ b/index.html
@@ -41,25 +41,25 @@
 					<li><label>Blogs</label></li>
 					<!-- <li><a href="unit1_projects/dbc1.html">DBC1</a></li> -->
 					<!-- <li><a href="unit1_projects/dbc2.html">DBC2</a></li> -->
-					<li><a href="blog-posts/unit3_cheatsheet.html">Git Cheatsheet</a></li>
-					<li><a href="unit1_projects/wireframe_sites.html">Wireframing</a></li>
-					<li><a href="unit1_projects/my_wireframe.html">Site Planning</a></li>
+		<!-- 			<li><a href="unit1_projects/wireframe_sites.html">Wireframing</a></li>
+					<li><a href="unit1_projects/my_wireframe.html">Site Planning</a></li> -->
+					<li><a href="blog-posts/week8_technical.html">How Good is Your Algorithm? : Big-O Notation</a></li>
+					<li><a href="blog-posts/week5_technical.html">Class in Ruby, Simplified</a></li>
+					<li><a href="blog-posts/week6_technical.html">Variables Scope in Ruby</a></li>
+					<li><a href="blog-posts/week5_cultural.html">Don't Be Afraid of Feedback, Welcome It!</a></li>
 					<li><a href="w2r/starting-point.html">Responsive Design</a></li>
 					<!-- <li><a href="gps1.1/gps1.1.html">GPS1.1</a></li> -->
-					<li><a href="blog-posts/week1_technical.html">My Favorite Sites</a></li>
+				<!-- 	<li><a href="blog-posts/week1_technical.html">My Favorite Sites</a></li>
 					<li><a href="blog-posts/week1_cultural.html">Take Charge of Your Edu</a></li>
 					<li><a href="blog-posts/week2_technical.html">Inline or Inline-block</a></li>
 					<li><a href="blog-posts/week3_technical.html">Why Javascript?</a></li>
-					<li><a href="blog-posts/week3_cultural.html">Know Thy Thinking Style</a></li>
+					<li><a href="blog-posts/week3_cultural.html">Know Thy Thinking Style</a></li> -->
 					<li><a href="blog-posts/week4_technical.html">What is Enumerable in Ruby?</a></li>
 					<li><a href="blog-posts/week4_cultural.html">Privacy is Dead</a></li>
-					<li><a href="blog-posts/week5_cultural.html">Don't Be Afraid of Feedback, Welcome It!</a></li>
-					<li><a href="blog-posts/week5_technical.html">Class in Ruby, Simplified</a></li>
-					<li><a href="blog-posts/week6_technical.html">Variables Scope in Ruby</a></li>
+					<li><a href="blog-posts/unit3_cheatsheet.html">Git Cheatsheet</a></li>
 					<li><a href="blog-posts/week6_cultural.html">Stereotype Threat, Not!</a></li>
 					<li><a href="blog-posts/week7_technical.html">Hacking SQL</a></li>
 					<li><a href="blog-posts/week7_cultural.html">The Way Out is In</a></li>
-					<li><a href="blog-posts/week8_technical.html">How Good is Your Algorithm? : Big-O Notation</a></li>
 					<li><a href="blog-posts/week8_cultural.html">How to Live with Broken Relationship</a></li>
 					<li><a href="blog-posts/week9_cultural.html">The Art of Asking</a></li>
 					<li><label>Game</label></li>
@@ -84,7 +84,7 @@
 							<div class="box black">
 								<span style="font-size: 1.2em; line-height:150%;">A Little Something About Myself</span>
 								<hr>
-								<p>I am 26 years. Born and raised in Bangkok, Thailand. Went to college in Indiana, USA at Earlham College. Majored in Politics. After college, I became a Theravada buddhist monk for 1 year. Afterward, I worked for my family in a rice mills factory while also helping a local temple organizing meditation courses. And out of all that, when I have free time. I code!</p>
+								<p>I am 26 years. Born and raised in Bangkok, Thailand. Went to college in Indiana, USA at Earlham College. Majored in Politics. After college, I became a Theravada buddhist monk for 1 year. Afterward, I worked for my family in a rice mills factory while also helping a local temple organizing meditation courses. And out of all that, when I have free time, I code!</p>
 							</div>
 						</div>
 						<div class="item large-4 medium-6 small-12 columns">
