--- a/unit1_projects/wireframe_sites.html
+++ b/unit1_projects/wireframe_sites.html
@@ -66,13 +66,13 @@
 							</div>
 
 							<div class="large-3 columns">
-								<ul class="side-nav">
+							<!-- 	<ul class="side-nav">
 									<li><a href="#">Link 1</a></li>
 									<li><a href="#">Link 2</a></li>
 									<li><a href="#">Link 3</a></li>
 									<li><a href="#">Link 4</a></li>
 								</ul>
-							</div>
+							</div> -->
 						</div>
 
 
@@ -81,16 +81,16 @@
 								<hr/>
 								<div class="row">
 									<div class="large-6 columns">
-										<p>&copy; Copyright no one at all. Go to town.</p>
+										<p>&copy; Copyright Supakorn Laohasongkram 2014</p>
 									</div>
-									<div class="large-6 columns">
+							<!-- 		<div class="large-6 columns">
 										<ul class="inline-list right">
 											<li><a href="#">Link 1</a></li>
 											<li><a href="#">Link 2</a></li>
 											<li><a href="#">Link 3</a></li>
 											<li><a href="#">Link 4</a></li>
 										</ul>
-									</div>
+									</div> -->
 								</div>
 							</div>
 						</footer>
