--- a/blog-posts/blog.html
+++ b/blog-posts/blog.html
@@ -67,7 +67,7 @@
 		<hr/>
 		<div class="row">
 			<div class="large-6 columns">
-				<p>&copy; Copyright no one at all. Go to town.</p>
+				<p>&copy; Copyright Supakorn Laohasongkram 2014</p>
 			</div>
 			<div class="large-6 columns">
 				<ul class="inline-list right">
