--- a/blog-posts/week4_technical.html
+++ b/blog-posts/week4_technical.html
@@ -129,7 +129,7 @@ p array # => [10, 550, 660, 7000, -30, 0]
 					<aside class="large-3 columns">
 						<div class="panel">
 							<img id="me" src="../unit1_projects/images/logo.jpg">
-							<p>Hi, I am Korn, a full-stack web developer, a designer, a buddhist fanatic, and an hobbyist philospher. Follow and like me from the icons below</p>
+							<p>Hi, I am Korn. Follow and like me from the icons below</p>
 							<hr>
 							<a href="https://www.facebook.com/kornslife?ref=hl"><i class="icon-facebook-rect"></i></a><hr>
 							<a href="https://twitter.com/klaoha06"><i class="icon-twitter-bird"></i></a><hr>
