--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 							<div class="box red">
 								<p><span style="font-size: 1.5em;">Welcome!</span></p>
 								<hr>
-								<p>..to my page! My name is Korn. This site is created for you! Here, you will learn about the kind of tech work I do and my points of view on the lastest trends and technologies. Below are my porfolio. To the left you will find my blog articles.<br><br><br>Enjoy and have a wonderful day!</p>
+								<p>..to my page! My name is Korn. This site is created for you! Here, you will learn about the kind of tech work I do and my points of view on the lastest trends and technologies. Below are my porfolio. On the menu tap on your top left, you will find my blog articles.<br><br><br>Enjoy and have a wonderful day!</p>
 							</div>
 						</div>
 						<div class="item large-4 medium-6 small-12 columns">
@@ -90,15 +90,15 @@
 						<div class="item large-4 medium-6 small-12 columns">
 							<div class="box red">
 
-								<p><span style="font-size: 1.2em; line-height:150%;">Projects</span><hr>
+								<p><span style="font-size: 1.2em; line-height:150%;">Web Development Projects</span><hr>
 									<ul class="square">
 										<li><a href="http://128.199.95.219:3000/">Suanmokkh.org</a>
 </li>								
 										<li><a href="http://puanjai.com">Puanjai.com</a></li>								
 										<li><a href="https://github.com/klaoha06/Kronos">Kronos</a></li>		
-										<li><a href="https://www.facebook.com/collegelovenature">College of Love and Nature</a></li>								
-										<li><a href="https://www.facebook.com/carpoolthailand">Carpool Thailand</a></li>								
-										<li><a href="https://www.facebook.com/kornslife">Personal Blog</a></li>								
+		<!-- 								<li><a href="https://www.facebook.com/collegelovenature">College of Love and Nature</a></li>								
+										<li><a href="https://www.facebook.com/carpoolthailand">Carpool Thailand</a></li>	 -->							
+										<li><a href="http://true-happiness.github.io/">True Happiness Blog</a></li>								
 									</ul>
 								 </p>
 							</div>
