--- a/blog-posts/week6_cultural.html
+++ b/blog-posts/week6_cultural.html
@@ -104,6 +104,28 @@
 								Personally, I do not like the term "stereotype threat." It makes you feel as if someone is hurting another when they really are not. People is flawed by design and misunderstanding and stereotyping is just part of life. But what matters most in the end is to know yourself unbiased for who you really are. That way, one could find shelter in facts from the storm of fictions, truth from the thoughts of truth, and perhaps, find peace and stillness amidst the ups and downs life.
 							</p>
 						</article>
+<div id="disqus_thread"></div>
+<script>
+/**
+* RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+* LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables
+*/
+/*
+var disqus_config = function () {
+this.page.url = PAGE_URL; // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+};
+*/
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+
+s.src = '//kornstechblog.disqus.com/embed.js';
+
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 					</div>
 
 					<aside class="large-3 columns">
