--- a/blog-posts/week8_technical.html
+++ b/blog-posts/week8_technical.html
@@ -119,11 +119,33 @@ This type of algorithm is described as <span class="redcolor">O(log N)</span>. T
 								Big-O measures the performance of an algorithm in relation to the size of input. Since Complexity measures ONLY how well an algorithm function, complexity affects performance but not the other way around. Even though Big-O is a good indicator of how a program might perform but this is still very theoretical. According to my research, a better and more practical measurement would be to use benchmark. For further reading, please go the reference section to learn more.
 								</p>
 						</article>
+<div id="disqus_thread"></div>
+<script>
+/**
+* RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+* LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables
+*/
+/*
+var disqus_config = function () {
+this.page.url = PAGE_URL; // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+};
+*/
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+
+s.src = '//kornstechblog.disqus.com/embed.js';
+
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 					</div>
 					<aside class="large-3 columns">
 						<div class="panel">
 							<img id="me" src="../unit1_projects/images/logo.jpg">
-							<p>Hi, I am Korn, a full-stack web developer, a designer, a buddhist fanatic, and an hobbyist philosopher. Follow, like, and contact me from the icons below</p>
+							<p>Hi, I am Korn. Follow, like, and contact me from the icons below</p>
 							<hr>
 							<a href="https://www.facebook.com/kornslife?ref=hl"><i class="icon-facebook-rect"></i></a><hr>
 							<a href="https://twitter.com/klaoha06"><i class="icon-twitter-bird"></i></a><hr>
