--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 							<div class="box black">
 								<span style="font-size: 1.2em; line-height:150%;">A Little Something About Myself</span>
 								<hr>
-								<p>I am 26 years. Born and raised in Bangkok, Thailand. Went to college in Indiana, USA at Earlham College. Majored in Politics. After college, I became a Theravada buddhist monk for 1 year. Afterward, I worked for my family in a rice mills factory while also helping a local temple organizing meditation courses. And out of all that, when I have free time, I code!</p>
+								<p>I am 26 years. Born and raised in Bangkok, Thailand. Went to college in Indiana, USA at Earlham College. Majored in International Studies. After college, I became a Theravada buddhist monk for 1 year. Now, I work for my family at a rice mills factory while at the same time manage a small SE web developing firm.</p>
 							</div>
 						</div>
 						<div class="item large-4 medium-6 small-12 columns">
@@ -95,10 +95,11 @@
 										<li><a href="http://128.199.95.219:3000/">Suanmokkh.org</a>
 </li>								
 										<li><a href="http://puanjai.com">Puanjai.com</a></li>								
-										<li><a href="https://github.com/klaoha06/Kronos">Kronos</a></li>		
 		<!-- 								<li><a href="https://www.facebook.com/collegelovenature">College of Love and Nature</a></li>								
 										<li><a href="https://www.facebook.com/carpoolthailand">Carpool Thailand</a></li>	 -->							
-										<li><a href="http://true-happiness.github.io/">True Happiness Blog</a></li>								
+										<li><a href="http://true-happiness.github.io/">True Happiness</a></li>								
+										<li><a href="https://github.com/klaoha06/Kronos">Kronos</a></li>		
+										<li><a href="#khaotah">Khao Tah Coffee</a></li>		
 									</ul>
 								 </p>
 							</div>
@@ -134,7 +135,7 @@
 									<p>Backend</p>
 								    <ul>
 								      <li>Ruby on Rails</li>
-								      <li>MongoDB</li>
+								      <li>Spree E-Commerce</li>
 								      <li>ActiveAdmin</li>
 								    </ul>
 								  </div>
@@ -188,6 +189,76 @@
 								  <div class="item shadow"><img src="assets/images/puanjai4.jpg" alt="Mirror Edge"></div>
 								</div>
 								 <a href="http://puanjai.com" class="button floatCenter small-red haveMargin">View Live</a>
+							</div>
+						</div>
+					</div> <!-- row -->
+					<div class="row">
+						<div class="large-12 columns">
+							<div class="box small-black">
+								<a href="http://puanjai.com"><h3>TRUE-HAPPINESS.GITHUB.IO</h3></a>
+								<hr>
+								<blockquote><strong>Purpose: </strong>This website is my personal blog where I share my experience and insight on my beautiful journey toward true happiness!</blockquote>
+								<h5>How Its Made:</h5>
+								<div class="row">
+									<div class="medium-6 columns">
+									<p>Backend</p>
+								    <ul>
+								      <li>Jekyll</li>
+								    </ul>
+								  </div>
+								  <div class="medium-6 columns">
+									<p>Frontend</p>
+								    <ul>
+								      <li>Bootstrap</li>
+								    </ul>
+								 </div>
+								 </div>
+
+								<div class="owl-demo owl-carousel owl-theme">
+								  <div class="item shadow"><img src="assets/images/truehappiness1.jpg" alt="The Last of us"></div>
+								  <div class="item shadow"><img src="assets/images/truehappiness2.jpg" alt="GTA V"></div>
+								  <!-- <div class="item shadow"><img src="assets/images/truehappiness3.jpg" alt="Mirror Edge"></div> -->
+								</div>
+								 <a href="http://true-happiness.github.io/" class="button floatCenter small-red haveMargin">View Live</a>
+							</div>
+						</div>
+					</div> <!-- row -->
+					<div id="khaotah" class="row">
+						<div class="large-12 columns">
+							<div class="box small-red">
+								<a href="http://puanjai.com"><h3>KHAO TAH COFFEE</h3></a>
+								<hr>
+								<blockquote><strong>Purpose: </strong>This is a website for my latest client, Khao Tah Coffee. Khao Tah is social entreprise whose goal is to advocate and buy organic coffee from the locals and sell them to the world. The website is still under development, but here is a teaser of how the website would look like.</blockquote>
+								<h5>How Its Made:</h5>
+								<div class="row">
+									<div class="medium-6 columns">
+									<p>Backend</p>
+								    <ul>
+								      <li>Ruby on Rails</li>
+								      <li>Postgresql</li>
+								    </ul>
+								  </div>
+								  <div class="medium-6 columns">
+									<p>Frontend</p>
+								    <ul>
+								      <li>Bootstrap</li>
+								    </ul>
+								 </div>
+								 </div>
+								 <img src="assets/images/khaotah1.jpg" alt="The Last of us">
+							</div>
+						</div>
+					</div> <!-- row -->
+					<div class="row">
+						<div class="large-12 columns">
+							<div class="box small-black">
+								<a href="http://puanjai.com"><h3>KUKKIK.GITHUB.IO</h3></a>
+								<hr>
+								<blockquote><strong>Purpose: </strong>This is the main page of Kukkik, my web developing firm. It's a cool social enterprise where its purpose is to develop web application for new social entreprenuer startups as well as any non profits organisation at a lower cost.</blockquote>
+								<div class="owl-demo owl-carousel owl-theme">
+								  <div class="item shadow"><img src="assets/images/kukkik1" alt="The Last of us"></div>
+								</div>
+								 <a href="http://kukkik-th.github.io/" class="button floatCenter small-red haveMargin">View Live</a>
 							</div>
 						</div>
 					</div> <!-- row -->
