--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 							<div class="box black">
 								<span style="font-size: 1.2em; line-height:150%;">A Little Something About Myself</span>
 								<hr>
-								<p>I am 26 years. Born and raised in Bangkok, Thailand. Went to college in Indiana, USA at Earlham College. Majored in International Studies. After college, I became a Theravada buddhist monk for 1 year. Now, I work for my family at a rice mills factory while at the same time manage a small SE web developing firm.</p>
+								<p>My name is Korn. I am 26 years old. Born and raised in Bangkok, Thailand. Went to college in Indiana, USA at Earlham College. Majored in International Studies. After college, I became a Theravada buddhist monk for 1 year. Now, I work for my family at a rice mills factory while at the same time manage a small SE web developing firm.</p>
 							</div>
 						</div>
 						<div class="item large-4 medium-6 small-12 columns">
@@ -195,7 +195,7 @@
 					<div class="row">
 						<div class="large-12 columns">
 							<div class="box small-black">
-								<a href="http://puanjai.com"><h3>TRUE-HAPPINESS.GITHUB.IO</h3></a>
+								<a href="http://puanjai.com"><h3>TRUE HAPPINESS</h3></a>
 								<hr>
 								<blockquote><strong>Purpose: </strong>This website is my personal blog where I share my experience and insight on my beautiful journey toward true happiness!</blockquote>
 								<h5>How Its Made:</h5>
@@ -245,14 +245,20 @@
 								    </ul>
 								 </div>
 								 </div>
-								 <img src="assets/images/khaotah1.jpg" alt="The Last of us">
+
+								 <div class="owl-demo owl-carousel owl-theme">
+								   <div class="item shadow"><img src="assets/images/khaotah1.jpg" alt="The Last of us"></div>
+						<!-- 		   <div class="item shadow"><img src="assets/images/khaotah2.jpg" alt="GTA V"></div>
+								   <div class="item shadow"><img src="assets/images/khaotah3.jpg" alt="GTA V"></div> -->
+								   <!-- <div class="item shadow"><img src="assets/images/truehappiness3.jpg" alt="Mirror Edge"></div> -->
+								 </div>
 							</div>
 						</div>
 					</div> <!-- row -->
 					<div class="row">
 						<div class="large-12 columns">
 							<div class="box small-black">
-								<a href="http://puanjai.com"><h3>KUKKIK.GITHUB.IO</h3></a>
+								<a href="http://puanjai.com"><h3>KUKKIK</h3></a>
 								<hr>
 								<blockquote><strong>Purpose: </strong>This is the main page of Kukkik, my web developing firm. It's a cool social enterprise where its purpose is to develop web application for new social entreprenuer startups as well as any non profits organisation at a lower cost.</blockquote>
 								<div class="owl-demo owl-carousel owl-theme">
@@ -263,7 +269,7 @@
 						</div>
 					</div> <!-- row -->
 					<footer class="item large-12 columns">
-						<p style="text-align: center";>&copy; Copyrights Supakorn Laohasongkram 2014</p>
+						<p style="text-align: center";>&copy; Copyrights Supakorn Laohasongkram 2015</p>
 					</footer>  
 					</div> <!-- gridcontainer -->
 					</section> <!-- container -->
