--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 								<p><span style="font-size: 1.2em; line-height:150%;">Web Development Portfolio</span><hr>
 									<ul class="square">
-										<li><a href="http://128.199.95.219:3000/">Suanmokkh.org</a>
+										<li><a href="http://www.suanmokkh.org/">Suanmokkh.org</a>
 										</li>								
 										<li><a href="http://puanjai.com">Puanjai.com</a></li>								
 										<li><a href="http://true-happiness.github.io/">True Happiness</a></li>								
@@ -125,7 +125,7 @@
 						<div class="large-12 columns">
 							<a name="portfolio"></a>
 							<div class="box small-black">
-								<a href="http://128.199.95.219:3000/"><h4>SUANMOKKH</h4></a>
+								<a href="http://www.suanmokkh.org/"><h4>SUANMOKKH</h4></a>
 								<hr>
 								<blockquote><strong>Purpose: </strong>This website is currently being developed for one of the most established Buddhist temple in Thailand. It functions is to serve pdf files, audios and other medias in order to allow people to easily acces the vast amount of Buddhist resources.</blockquote>
 								<h5>How Its Made:</h5>
@@ -152,7 +152,7 @@
 									<div class="item shadow"><img src="assets/images/suanmokkh4.jpg" alt="Mirror Edge"></div>
 									<div class="item shadow"><img src="assets/images/suanmokkh5.jpg" alt="Mirror Edge"></div>
 								</div>
-								<a href="http://128.199.95.219:3000/" class="button floatCenter small-red haveMargin">View Live</a>
+								<a href="http://www.suanmokkh.org/" class="button floatCenter small-red haveMargin">View Live</a>
 							</div>
 						</div>
 					</div> <!-- row -->
